# goflow2_reader_rs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  netflow_record.rs  process_reader.rs  protobuf.rs
