[package]
name = "gf2_reader"
version = "0.1.2"
edition = "2024"

[dependencies]
bzip2 = "0.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1.3"
ipnet = "2"
rhai = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sevenz-rust2 = { version = "0.15"}
strum = "0.26"
strum_macros = "0.26"
xz = { version = "0.1" }

